payments related changes,minior fixes

--- a/templates/dashboard/pages/acceptTripReq.html
+++ b/templates/dashboard/pages/acceptTripReq.html
@@ -12,6 +12,6 @@
 </div> 
 {{{{raw-helper}}}}
 <script type="text/javascript">
-    console.log("template data acceptTripReq",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".accept-trip-content",e,{schemaOverride:{fields:{}},optionsOverride:{fields:{comment:{type:"textarea"}}},postUrl:"requests/service/addRequest",callbacks:{afterSubmit:function(){MENU_HELPER.menuClick("manageTrip","manageTrip")}}})});
+    console.log("template data acceptTripReq",UTILS.getCurrentTemplateData()),$(document).ready(function(){var e=UTILS.getCurrentTemplateData();FORM_HELPER.draw(".accept-trip-content",e,{schemaOverride:{fields:{}},optionsOverride:{fields:{comment:{type:"textarea"}}},postUrl:"requests/service/addRequest",callbacks:{afterSubmit:function(){MENU_HELPER.menuClick("manageTrucks","manageTrucks")}}})});
 </script>
 {{{{/raw-helper}}}}
