--- a/templates/dashboard/pages/addTrip.html
+++ b/templates/dashboard/pages/addTrip.html
@@ -1,4 +1,7 @@
 {{{{raw-helper}}}}
+<style>
+.alpaca-field-object{border:0 solid #eee;border-radius:0;padding:10px}
+</style>
 {{{{/raw-helper}}}}
 {{> header}}
 <div class='new-trips'>
