--- a/templates/dashboard/pages/addTripMin/addTripMin.html
+++ b/templates/dashboard/pages/addTripMin/addTripMin.html
@@ -5,6 +5,9 @@
       </div>
     <div class='new-trips-content' id="newtripscontainer">
     </div>
+
+    <div class='new-trips-content-full' id="newtripscontainerfull" style="display: none;">
+    </div>
 </div> 
 
 {{{{raw-helper}}}}
