--- a/templates/dashboard/pages/manageTrip/manageTrip.html
+++ b/templates/dashboard/pages/manageTrip/manageTrip.html
@@ -5,11 +5,17 @@
                             <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <i class="fa {{pageIcon}}"></i> 
+                            <BtnCaption>
                              {{#if extraOptions.data}}
-                             <BtnCaption>{{extraOptions.data.status}}</BtnCaption>  
+                                        {{#if extraOptions.data.status}}
+                                            {{extraOptions.data.status}}
+                                        {{else}}
+                                             All
+                                        {{/if}} 
                              {{else}}
-                             <BtnCaption>{{pageSubHeading}}</BtnCaption>  
+                                {{pageSubHeading}}  
                              {{/if}}
+                            </BtnCaption>
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             
