--- a/templates/dashboard/pages/logPaymentDetails/logPaymentDetails.html
+++ b/templates/dashboard/pages/logPaymentDetails/logPaymentDetails.html
@@ -1,7 +1,9 @@
 {{> header}}
 <div class='trip-payment'>
 
-                       <div class="col-sm-10">
+                       <div class="col-sm-6">
+                           Total cost of the trip is <strong>
+                               {{templateData.data.quotes.cost}} &#8377; </strong> <br>
                         <div class='trip-payment-content'>
                          </div>
                        </div>
@@ -12,12 +14,11 @@
 <script id="cost" type="text/x-handlebars-template">
     <div>
     <p class="h5">Total cost of the trip is <mark>{{data}}</mark> Rs.<p>
-
-  <strong>Account No:</strong>  XXXXXXXXX787,<br>
+ <!--  <strong>Account No:</strong>  XXXXXXXXX787,<br>
   <strong>Bank Name:</strong>  State Bank of India,<br>
   <strong>Branch:</strong>      Vijayawada.<br>
   <strong>IFSC: </strong>       SBI004562 <br>
-        </div>
+        </div> -->
 </script>
 <script id="tripPayment" type="text/x-handlebars-template">
 
