--- a/templates/dashboard/pages/manageDrivers.html
+++ b/templates/dashboard/pages/manageDrivers.html
@@ -7,11 +7,17 @@
                         <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa {{pageIcon}}"></i> 
-                         {{#if extraOptions.data}}
-                         <BtnCaption>{{extraOptions.data.status}}</BtnCaption>  
-                         {{else}}
-                         <BtnCaption>{{pageSubHeading}}</BtnCaption>  
-                         {{/if}}
+                        <BtnCaption>
+                                {{#if extraOptions.data}}
+                                           {{#if extraOptions.data.status}}
+                                               {{extraOptions.data.status}}
+                                           {{else}}
+                                                All
+                                           {{/if}} 
+                                {{else}}
+                                   {{pageSubHeading}}  
+                                {{/if}}
+                               </BtnCaption>
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="javascript:statusChanged('All');">All</a>
